[project]
name = "dataiku-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.32.0",
    "pyarrow>=21.0.0",
    "scipy>=1.16.1",
]
