[project]
name = "dataiku-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.12.4",
    "ipykernel>=6.30.0",
    "joblib==1.4.2",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "notebook>=7.4.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.32.0",
    "pyarrow>=21.0.0",
    "scikit-learn==1.5.2",
    "scipy>=1.16.1",
]
